--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -43,6 +43,7 @@ jobs:
     name: Sonar
     uses: bitwarden/gh-actions/.github/workflows/_sonar.yml@main
     needs: check-run
+    if: ${{ github.event.repository.private == false }}
     secrets:
       AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
