--- a/.github/workflows/zizmor.yml
+++ b/.github/workflows/zizmor.yml
@@ -38,9 +38,6 @@ jobs:
       - name: Run zizmor
         if: steps.changed-workflow-files.outputs.any_changed == 'true'
         uses: zizmorcore/zizmor-action@5ca5fc7a4779c5263a3ffa0e1f693009994446d1 # v0.1.2
-        env:
-          ALL_CHANGED_FILES: ${{ steps.changed-workflow-files.outputs.all_changed_files }}
-          USE_ADVANCED_SECURITY: ${{ github.event.repository.private == false }}
         with:
-          advanced-security: ${USE_ADVANCED_SECURITY}
-          inputs: ${ALL_CHANGED_FILES}
+          advanced-security: ${{ github.event.repository.private == false }}
+          inputs: ${{ steps.changed-workflow-files.outputs.all_changed_files }}
