--- a/.github/workflows/version-auto-bump.yml
+++ b/.github/workflows/version-auto-bump.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Configure Git
         run: |
           git config --local user.email "actions@github.com"
-          git config --local user.name "Github Actions"
+          git config --local user.name "Github Actions 2"
 
       - name: Get current Desktop version
         id: current-desktop-version
