Move Zizmor to errors

--- a/settings.yaml
+++ b/settings.yaml
@@ -22,7 +22,7 @@ enabled_rules:
     - id: bitwarden_workflow_linter.rules.check_blocked_domains.RuleCheckBlockedDomains
       level: warning
     - id: bitwarden_workflow_linter.rules.run_zizmor.RunZizmor
-      level: warning
+      level: error
 
 approved_actions_path: default_actions.json
 default_branch: main
